--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,4 @@
 CALENDAR_ID=c_qwerty@group.calendar.google.com
-CALENDAR_TEAM_MEMBERS=[{ name: "Example", email: "example@email.com" }]
+CALENDAR_TEAM_MEMBERS={"members": [{ "name": "Example", "email": "example@email.com" }]}
 CALENDAR_WEEKS_COUNT=6
 CALENDAR_START_DATE=
